force-app/main/default/objects/EDealer_SOF_Summary__c/EDealer_SOF_Summary__c.object-meta.xml
<CustomObject>
    <label>EDealer SOF Summary</label>
    <nameField>
        <displayFormat>Summary-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDealer SOF Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>