force-app/main/default/objects/EDealer_SOF_Summary__c/fields/Dealer_Divison__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Divison__c</fullName>
    <label>Dealer Divison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>