force-app/main/default/objects/EDealer_SOF_Summary__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>If Suggested Parts Api get error message</description>
    <label>Error Message</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>