force-app/main/default/objects/EDealer_SOF_Summary__c/fields/IsCalledAgain__c.field-meta.xml
<CustomField>
    <fullName>IsCalledAgain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCalledAgain</label>
    <type>Checkbox</type>
</CustomField>