force-app/main/default/objects/EDealer_SOF_Summary__c/fields/IsFailed__c.field-meta.xml
<CustomField>
    <fullName>IsFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It&apos;s check/True when api failed or any exception occur.</description>
    <label>IsFailed</label>
    <type>Checkbox</type>
</CustomField>