force-app/main/default/objects/EDealer_SOF_Summary__c/fields/SOF_Api__c.field-meta.xml
<CustomField>
    <fullName>SOF_Api__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checkbox is true that means SOF api called to get suggested parts details.</description>
    <label>SOF Api</label>
    <type>Checkbox</type>
</CustomField>