force-app/main/default/objects/EDealer_SOF_Summary__c/fields/SOF_Count__c.field-meta.xml
<CustomField>
    <fullName>SOF_Count__c</fullName>
    <label>SOF Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>