force-app/main/default/objects/EDealer_SOF_Summary__c/fields/SOF_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SOF_Date_Time__c</fullName>
    <label>SOF Date/Time</label>
    <type>DateTime</type>
</CustomField>